package pt.psoft.g1.psoftg1.bookmanagement.model;

import jakarta.persistence.Embeddable;

@Embeddable
public class Description {
    String description;
}
