@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle
hide methods

class Librarian {
    - name
    - email
    - password
    /'falta saber como é feita a autenticação'/
}

class ISBN{
/'temos que implementar alguma validação?'/
/'https://en.wikipedia.org/wiki/ISBN'/
    - isbn: string
}

class Title{
/'regras?'/
    - title: string
}

class Genre{
/'escolhido de uma lista?'/
    - genre: string
}

class Description{
/'limite de caractéres?'/
    - description: string
}

class Book {
    - isbn: isbn
    - title: title
    - genre: genre
    - description: description
    - authors: authors
}

class Author {
    - author number
    - name
    - photo
    - short bio
    /'perguntar '/
   }

class Reader {
    - name /'regras?'/
    - birthDate /'limite inferior/superior? '/
    - gdprConsent /'que implicações tem?'/
    - readerId
}

class Lending {
    - startDate
    - limitDate
    - returnDate
    - returned
}

class PhoneNr {
/'como fazer a validação?'/
    - countryCode
    - number
}

class Email {
    /'perguntar se o domínio tem que ser validado?'/
    /'há domínios restritos?'/
    - user
    - domain
}

Librarian "1" -- "0..*" Author : registers/updates >
Librarian "1" -- "0..*" Book : registers/updates >
Book "1..*" -- "1..*"  Author
Reader "1" -- "1*" PhoneNr  /'mais que um?'/
Reader "1" -- "1*" Email   /'mais que um?'/
Reader "1" - Lending
Lending "0..*" -  "0..*"Book
Book "1" -- "1" ISBN
Book "1" -- "1" Title
Book  "1" -- "1*"  Genre
Book  "1" -- "1"  Description

@enduml

